--- a/libimobiledevice.vcxproj
+++ b/libimobiledevice.vcxproj
@@ -42,12 +42,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <IntDir>$(ProjectName)-$(Configuration)\</IntDir>
-    <OutDir>C:\dev\include\libimobiledevice\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <IntDir>$(ProjectName)-$(Configuration)\</IntDir>
-    <OutDir>C:\dev\include\libimobiledevice\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -57,13 +57,14 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;LIBIMOBILEDEVICE_EXPORTS;HAVE_OPENSSL;plist_EXPORTS;__LITTLE_ENDIAN__;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>CompileAsCpp</CompileAs>
-      <AdditionalIncludeDirectories>.\;include;include\windows;..\libplist\include;C:\OpenSSL-Win32\include;..\libusbmuxd\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\;include;include\windows;..\libplist\include;$(SolutionDir)\vendors\openssl\include;..\usbmuxd\include</AdditionalIncludeDirectories>
+      <RuntimeTypeInfo>true</RuntimeTypeInfo>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\Debug;C:\OpenSSL-Win32\lib\VC\static;..\libxml2-2.7.8\lib;..\iconv-1.9.2\lib;..\zlib-1.2.5\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libcnary.lib;libusbmuxd.lib;libeay32MTd.lib;ssleay32MTd.lib;zlib.lib;iconv_a.lib;libxml2_a.lib;Ws2_32.lib;libplist.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)$(Configuration);$(SolutionDir)\vendors\openssl\lib;$(SolutionDir)\vendors\libxml2\lib;$(SolutionDir)\vendors\iconv\lib;$(SolutionDir)\vendors\zlib\lib;$(SolutionDir)\vendors\libgcc\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libcnary.lib;libusbmuxd.lib;zlib.lib;iconv_a.lib;libxml2_a.lib;Ws2_32.lib;libplist.lib;shlwapi.lib;libgcc.a;libssl.a;libcrypto.a;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>MSVCRT</IgnoreSpecificDefaultLibraries>
       <ModuleDefinitionFile>libimobiledevice.def</ModuleDefinitionFile>
     </Link>
@@ -77,7 +78,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;LIBIMOBILEDEVICE_EXPORTS;HAVE_OPENSSL;plist_EXPORTS;STRIP_DEBUG_CODE;__LITTLE_ENDIAN__;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\;include;include\windows;..\libplist\include;C:\OpenSSL-Win32\include;..\libusbmuxd\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\;include;include\windows;..\libplist\include;$(SolutionDir)\vendors\openssl\include;..\usbmuxd\include</AdditionalIncludeDirectories>
       <CompileAs>CompileAsCpp</CompileAs>
     </ClCompile>
     <Link>
@@ -86,8 +87,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <ModuleDefinitionFile>libimobiledevice.def</ModuleDefinitionFile>
-      <AdditionalDependencies>libcnary.lib;libusbmuxd.lib;libeay32MT.lib;ssleay32MT.lib;zlib.lib;iconv_a.lib;libxml2_a.lib;Ws2_32.lib;libplist.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\Release;C:\OpenSSL-Win32\lib\VC\static;..\libxml2-2.7.8\lib;..\iconv-1.9.2\lib;..\zlib-1.2.5\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libcnary.lib;libusbmuxd.lib;zlib.lib;iconv_a.lib;libxml2_a.lib;Ws2_32.lib;libplist.lib;shlwapi.lib;libgcc.a;libssl.a;libcrypto.a;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)$(Configuration);$(SolutionDir)\vendors\openssl\lib;$(SolutionDir)\vendors\libxml2\lib;$(SolutionDir)\vendors\iconv\lib;$(SolutionDir)\vendors\zlib\lib;$(SolutionDir)\vendors\libgcc\lib</AdditionalLibraryDirectories>
       <ImageHasSafeExceptionHandlers>
       </ImageHasSafeExceptionHandlers>
       <IgnoreSpecificDefaultLibraries>
