--- a/libimobiledevice.vcxproj
+++ b/libimobiledevice.vcxproj
@@ -55,7 +55,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;LIBIMOBILEDEVICE_EXPORTS;HAVE_OPENSSL;plist_EXPORTS;__LITTLE_ENDIAN__;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;LIBIMOBILEDEVICE_EXPORTS;HAVE_OPENSSL;plist_EXPORTS;__LITTLE_ENDIAN__;_CRT_SECURE_NO_WARNINGS;USE_APPLE_CONFIG_DIR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>CompileAsCpp</CompileAs>
       <AdditionalIncludeDirectories>.\;include;include\windows;..\libplist\include;$(SolutionDir)\vendors\openssl\include;..\usbmuxd\include</AdditionalIncludeDirectories>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
@@ -77,7 +77,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;LIBIMOBILEDEVICE_EXPORTS;HAVE_OPENSSL;plist_EXPORTS;STRIP_DEBUG_CODE;__LITTLE_ENDIAN__;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;LIBIMOBILEDEVICE_EXPORTS;HAVE_OPENSSL;plist_EXPORTS;STRIP_DEBUG_CODE;__LITTLE_ENDIAN__;_CRT_SECURE_NO_WARNINGS;USE_APPLE_CONFIG_DIR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>.\;include;include\windows;..\libplist\include;$(SolutionDir)\vendors\openssl\include;..\usbmuxd\include</AdditionalIncludeDirectories>
       <CompileAs>CompileAsCpp</CompileAs>
     </ClCompile>
