--- a/libimobiledevice.vcxproj
+++ b/libimobiledevice.vcxproj
@@ -64,7 +64,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)$(Configuration);$(SolutionDir)\vendors\openssl\lib;$(SolutionDir)\vendors\libxml2\lib;$(SolutionDir)\vendors\iconv\lib;$(SolutionDir)\vendors\zlib\lib;$(SolutionDir)\vendors\libgcc\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libcnary.lib;libusbmuxd.lib;zlib.lib;iconv_a.lib;libxml2_a.lib;Ws2_32.lib;libplist.lib;shlwapi.lib;libgcc.a;libssl.a;libcrypto.a;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libcnary.lib;libusbmuxd.lib;zlib.lib;iconv_a.lib;libxml2_a.lib;Ws2_32.lib;libplist.lib;shlwapi.lib;libssl32.a;libeay32.a;libcrypto.a;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>MSVCRT</IgnoreSpecificDefaultLibraries>
       <ModuleDefinitionFile>libimobiledevice.def</ModuleDefinitionFile>
     </Link>
@@ -87,7 +87,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <ModuleDefinitionFile>libimobiledevice.def</ModuleDefinitionFile>
-      <AdditionalDependencies>libcnary.lib;libusbmuxd.lib;zlib.lib;iconv_a.lib;libxml2_a.lib;Ws2_32.lib;libplist.lib;shlwapi.lib;libgcc.a;libssl.a;libcrypto.a;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libcnary.lib;libusbmuxd.lib;zlib.lib;iconv_a.lib;libxml2_a.lib;Ws2_32.lib;libplist.lib;shlwapi.lib;libssl32.a;libeay32.a;libcrypto.a;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)$(Configuration);$(SolutionDir)\vendors\openssl\lib;$(SolutionDir)\vendors\libxml2\lib;$(SolutionDir)\vendors\iconv\lib;$(SolutionDir)\vendors\zlib\lib;$(SolutionDir)\vendors\libgcc\lib</AdditionalLibraryDirectories>
       <ImageHasSafeExceptionHandlers>
       </ImageHasSafeExceptionHandlers>
